Moved the files to subfolders for a cleaner structure

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=Elsparkesykler
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=username
+spring.datasource.password=pass
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+spring.jpa.show-sql=true
