--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.password=pass
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 spring.jpa.show-sql=true
+
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.open-in-view=false
